# git-amend-date

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  git-amend-date  pyproject.toml  update-commit-date.sh
.github/workflows/: main.yml  release.yml
git_amend_date/: main.py
